# openigtlink-rust

./: .gitignore  .gitkeep  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test_query_import
.github/workflows/: ci.yml  release.yml
benches/: network.rs  serialization.rs  throughput.rs
docs/: cpp_comparison.md  protocol_extensions.md  python_wrapping_analysis.md  query_streaming_analysis.md  query_usage.md
examples/: async_client.rs  async_communication.rs  async_dynamic_receiver.rs  async_server.rs  client.rs  client_helpers.rs  client_query_helpers.rs  client_udp_tracking.rs  compression_demo.rs  crc_verification_options.rs  demo_compression.rs  demo_version3_extended_header.rs  dynamic_receiver.rs  error_handling.rs  generate_test_certs.sh  image_streaming.rs  logging.rs  logging_demo.rs  message_queue.rs  ndarray_transfer.rs  partial_transfer.rs  partial_transfer_demo.rs  performance_test.rs  point_navigation.rs  query_streaming.rs  reconnect.rs  reconnect_demo.rs  sensor_logger.rs  server.rs  session_manager.rs  session_manager_demo.rs  status_monitor.rs  string_command.rs  tls_communication.rs  tracking_server.rs  udp_tracking.rs  version3_extended_header.rs  version3_metadata.rs  video_streaming.rs
examples/certs/: cert.pem  key.pem
openigtlink-inspector/: .gitignore  ARCHITECTURE_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  STATE_MANAGEMENT_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
openigtlink-inspector.egui-backup/: Cargo.toml
openigtlink-inspector.egui-backup/src/: types.rs
openigtlink-inspector.egui-backup/src/ui/: mod.rs
openigtlink-inspector/src/: App.css  App.tsx  index.css  main.rs  types.rs
openigtlink-inspector/src-tauri/: Cargo.toml  tauri.conf.json
openigtlink-inspector/src-tauri/src/: commands.rs  connection.rs  main.rs  types.rs
openigtlink-inspector/src/components/: MessageList.css  MessageList.tsx  MessagePanel.css  MessagePanel.tsx  SendPanel.css  SendPanel.tsx  SettingsWindow.css  SettingsWindow.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  TopBar.css  TopBar.tsx
openigtlink-inspector/src/connection/: client_handler.rs
openigtlink-inspector/src/store/: appStore.ts
openigtlink-inspector/src/ui/: client_tab.rs  server_tab.rs
openigtlink-inspector/src/ui/components/: mod.rs  received_messages.rs  send_panel.rs
openigtlink-rust/: Cargo.toml
openigtlink-rust/benches/: compression.rs  serialization.rs  throughput.rs
openigtlink-rust/docs/: query_usage.md
openigtlink-rust/examples/: async_client.rs  async_server.rs  client_async_dynamic_receiver.rs  client_image_streaming.rs  demo_tls_communication.rs  demo_version3_metadata.rs  server_tracking.rs
openigtlink-rust/src/: lib.rs
openigtlink-rust/src/io/: async_server.rs  builder.rs  common.rs  tls_server.rs  udp.rs  unified_async_client.rs
openigtlink-rust/src/protocol/: any_message.rs  crc.rs  header.rs  message.rs
openigtlink-rust/src/protocol/types/: bind.rs  capability.rs  colortable.rs  command.rs  image.rs  ndarray.rs  polydata.rs  position.rs  status.rs  trajectory.rs  transform.rs  video.rs
openigtlink-rust/src/protocol/types/query/: get.rs  mod.rs  streaming.rs
openigtlink-rust/tests/: builder_integration_test.rs  cpp_compat.rs
src/: compression.rs  error.rs  lib.rs
src/io/: async_client.rs  async_server.rs  builder.rs  client.rs  common.rs  message_queue.rs  mod.rs  partial_transfer.rs  reconnect.rs  server.rs  session_manager.rs  sync_client.rs  tls_client.rs  tls_reconnect.rs  tls_server.rs  udp.rs  unified_async_client.rs  unified_client.rs
src/protocol/: any_message.rs  crc.rs  extended_header.rs  factory.rs  header.rs  message.rs  mod.rs
src/protocol/types/: bind.rs  capability.rs  colortable.rs  command.rs  image.rs  imgmeta.rs  lbmeta.rs  mod.rs  ndarray.rs  point.rs  polydata.rs  position.rs  qtdata.rs  sensor.rs  status.rs  string.rs  tdata.rs  trajectory.rs  transform.rs  video.rs  videometa.rs
src/protocol/types/query/: mod.rs  rts.rs  streaming.rs
tests/: builder_integration_test.rs  client_helpers.rs  cpp_compat.rs
