[package]
name = "openigtlink-inspector"
version = "0.1.0"
edition = "2021"
authors = ["Wonjin Kang <kangwonjin.dev@gmail.com>"]
description = "GUI inspection and testing tool for OpenIGTLink protocol"
license = "MIT"

[dependencies]
# Core library
openigtlink-rust = { path = "../openigtlink-rust", version = "0.4" }

# GUI framework
egui = "0.29"
eframe = { version = "0.29", default-features = true }
egui_extras = { version = "0.29", features = ["all_loaders"] }

# Async runtime
tokio = { workspace = true }

# Serialization (for settings)
serde = { workspace = true }
serde_json = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
